--- a/public/common/Header.css
+++ b/public/common/Header.css
@@ -1,3 +1,8 @@
+h1{
+  text-align: center;
+}
+
+
 .logo {
     display: flex;
     align-content: initial;
@@ -27,7 +32,7 @@
   }
    
   .nav a:hover {
-    background-color: #005f5f;
+    background-color: #526f6d;
   }
    
   .nav a.active {
