--- a/public/common/main.css
+++ b/public/common/main.css
@@ -28,11 +28,25 @@ body {
     color: #444;
 }
 
+li {
+    padding: 5px;
+}
+
 table tr td {
     border: 1px solid black;
     padding: 15px;
 }
 
+.routes {
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+.paths {
+    font-weight: normal;
+    font-size: 1.25rem;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 header {
 	position: relative;
@@ -59,7 +73,8 @@ h2 {
 h3 {
 	font-size: 30px;
 	line-height: 1.3em;
-	margin-bottom: 0.5em;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
 }
 
 p {
