--- a/public/common/Header.css
+++ b/public/common/Header.css
@@ -1,5 +1,6 @@
 h1{
   text-align: center;
+  
 }
 
 
@@ -20,6 +21,7 @@ h1{
     line-height: 40px;
     height: 40px;
     border-bottom: 1px solid #888;
+    
   }
    
   .nav a {
@@ -29,16 +31,18 @@ h1{
     transition: .3s background-color;
     padding-left: 7px;
     padding-right: 7px;
-  }
+    }
    
   .nav a:hover {
     background-color: #526f6d;
+    padding-bottom: .245em;
   }
    
   .nav a.active {
     background-color: #fff;
     color: #444;
     cursor: default;
+    padding-bottom: .5em;
   }
    
   @media screen and (min-width: 600px) {
