--- a/public/common/main.css
+++ b/public/common/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Merriweather:300,400,700,900&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,500,600,700,800,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');
 
 
 .content-container {
@@ -12,6 +12,14 @@
     grid-row-gap: 5px;
     width: 95%;
     margin: auto;
+}
+
+body {
+    padding: 3em;
+}
+
+.nick {
+    padding-bottom: -1em;
 }
     
 .routes { 
@@ -51,7 +59,9 @@ table tr td {
 .paths {
     font-weight: normal;
     font-size: 1.25rem;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'playfair display';
+
+    
 }
 
 header {
@@ -68,7 +78,9 @@ h1 {
 	font-size: 85px;
     line-height: 1.3em;
     font-family: 'Playfair Display';
-    font-weight: 700;
+    font-weight: 900;
+    
+    
 }
 
 h2 {
@@ -76,13 +88,22 @@ h2 {
 	line-height: 1.3em;
     margin-bottom: 0.5em;
     font-family: 'Playfair Display';
+    
 }
 
 h3 {
-	font-size: 30px;
+	font-size: 50px;
 	line-height: 1.3em;
     margin-bottom: 0.5em;
-    font-family: 'Lato';
+    font-family: 'Playfair Display';
+    font-weight: 690;
+    text-transform: uppercase;
+    padding-bottom: .5em;
+    padding-top: 1em;
+    color: #dfa4a9;
+    text-shadow: 2px 4px 3px rgba(0,0,0,0.2);
+
+
 
 }
 
@@ -90,13 +111,21 @@ p {
     font-size: 1em;
     font-family: Merriweather;
     font-weight: 200;
+
 }
 
 a {
  text-decoration: underline;
  font-family: 'Playfair Display';
  font-weight: 500;
+}
 
+span {
+    font-family: 'Playfair Display';
+}
+
+li {
+    padding-left: 2em;
 }
 
 
