--- a/public/common/Header.css
+++ b/public/common/Header.css
@@ -26,7 +26,7 @@ h1{
    
   .nav a {
     text-decoration: none;
-    color: #fff;
+    color: #3b3a3a;
     display: block;
     transition: .3s background-color;
     padding-left: 7px;
@@ -34,15 +34,9 @@ h1{
     }
    
   .nav a:hover {
+    color: #fff;
     background-color: #526f6d;
     padding-bottom: .245em;
-  }
-   
-  .nav a.active {
-    background-color: #fff;
-    color: #444;
-    cursor: default;
-    padding-bottom: .5em;
   }
    
   @media screen and (min-width: 600px) {
