--- a/public/common/main.css
+++ b/public/common/main.css
@@ -136,12 +136,15 @@ li {
 }
 
 
-.container {
+#container {
 height: 600px;
 width: 600px;
 }
 
-
+#timecontainer {
+    height: 800px;
+    width: 1000px;
+}
 
 @media (max-width:700px){
     h1{font-size:36px;}
